new linkedin link

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <li><svg src="icons/email.svg" /><a href="mailto:dmitry@galyuk.com">dmitry@galyuk.com</a></li>
                 <li><svg src="icons/phone.svg" />+995 55 823 13 89</li>
                 <li><svg src="icons/im.svg" />+375 29 629 28 17</li>
-                <li><svg src="icons/linkedin.svg" /><a href="https://www.linkedin.com/in/dmitry-galyuk-2645a08/">LinkedIn</a></li>
+                <li><svg src="icons/linkedin.svg" /><a href="https://www.linkedin.com/in/dmitry-galyuk">LinkedIn</a></li>
                 <li><svg src="icons/github.svg" /><a href="https://github.com/DmitryGalyuk">GitHub</a></li>
                 <li><svg src="icons/address.svg" />Georgia, Batumi</li>
             </ul>
@@ -127,6 +127,7 @@
                     <li><a href="" onclick="showProjects('prog'); return false;">Software Engineer</a> since 1999</li>
                     <li><a href="" onclick="showProjects('pm'); return false;">Project Manager</a> since 2006</li>
                     <li><a href="" onclick="showProjects('org'); return false;">Organizational Manager</a> since 2012</li>
+                    <li><a href="https://www.scrum.org/user/153542">Certified Scrum Master</a></li>
                 </ul>
                 <ul>
                     <li>English: B2</li>
