--- a/index.html
+++ b/index.html
@@ -189,9 +189,10 @@
                 <span class="employer">EPAM Systems Georgia</span>
                 <span class="title">Head of Delivery Operations, EPAM APAC</span>
                 <ul>
-                    <li>Setup and run the delivery operations in EPAM APAC region (CN, VN, SG, HK, JP, AU, MY)</li>
-                    <li>Intake new business, run presales</li>
                     <li>Assure green delivery</li>
+                    <li>Intake new business, run presales</li>
+                    <li>Rollout the Engineering Excellence program in the region, focus on engineering processes quality</li>
+                    <li>Setup and run the delivery operations in EPAM APAC region (CN, VN, SG, HK, JP, AU, MY, TH)</li>
                     <li>Establish robust staffing process</li>
                     
                 </ul>
