--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
         <ul class="contacts">
             <li><svg src="icons/email.svg" /><span class="contacttext"><a href="mailto:dmitry@galyuk.com">dmitry@galyuk.com</a></span></li>
             <!-- <li><svg src="icons/im.svg" /><span class="contacttext">+375 29 629 28 17</span></li> -->
-            <li><svg src="icons/im.svg" /><svg src="icons/phone.svg" /><span class="contacttext">+995 55 823 13 89</span></li>
+            <li><svg src="icons/phone.svg" /><span class="contacttext">+48 22 219 8790</span></li>
             <li><svg src="icons/linkedin.svg" /><span class="contacttext"><a href="https://www.linkedin.com/in/dmitry-galyuk" print="dmitry-galyuk" screen="LinkedIn">LinkedIn</a></span></li>
             <li><svg src="icons/github.svg" /><span class="contacttext"><a href="https://github.com/DmitryGalyuk" print="DmitryGalyuk" screen="GitHub">GitHub</a></span></li>
             <li><svg src="icons/address.svg" /><span class="contacttext">Georgia, Batumi</span></li>
         </ul>
-        <span class="moto">Software Engineering Program Manager. Cross Platform. Cross Culture</span>
+        <!-- <span class="moto">Software Engineering Program Manager. Cross Platform. Cross Culture</span> -->
+        <span class="moto">Senior Leader in Software Engineering. I have vast experience in leading the products development, people management within cross cultural teams and still hands on engineer.</span>
     </header>
     <main>
         <section class="summary">
