--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <header>
         <h1>Dmitry Galyuk</h1>
         <ul class="contacts">
-            <li><svg src="icons/email.svg" /><span class="contacttext"><a href="mailto:dmitry@galyuk.com">dmitry@galyuk.com</a></span></li>
-            <!-- <li><svg src="icons/im.svg" /><span class="contacttext">+375 29 629 28 17</span></li> -->
-            <li><svg src="icons/phone.svg" /><span class="contacttext">+48 22 219 8790</span></li>
-            <li><svg src="icons/linkedin.svg" /><span class="contacttext"><a href="https://www.linkedin.com/in/dmitry-galyuk" print="dmitry-galyuk" screen="LinkedIn">LinkedIn</a></span></li>
-            <li><svg src="icons/github.svg" /><span class="contacttext"><a href="https://github.com/DmitryGalyuk" print="DmitryGalyuk" screen="GitHub">GitHub</a></span></li>
-            <li><svg src="icons/address.svg" /><span class="contacttext">Warsaw, Poland</span></li>
+            <li><img class="svgIcon" src="icons/email.svg" /><span class="contacttext"><a href="mailto:dmitry@galyuk.com">dmitry@galyuk.com</a></span></li>
+            <!-- <li><img class="svgIcon" src="icons/im.svg" /><span class="contacttext">+375 29 629 28 17</span></li> -->
+            <li><img class="svgIcon" src="icons/phone.svg" /><span class="contacttext">+48 22 219 8790</span></li>
+            <li><img class="svgIcon" src="icons/linkedin.svg" /><span class="contacttext"><a href="https://www.linkedin.com/in/dmitry-galyuk" print="dmitry-galyuk" screen="LinkedIn">LinkedIn</a></span></li>
+            <li><img class="svgIcon" src="icons/github.svg" /><span class="contacttext"><a href="https://github.com/DmitryGalyuk" print="DmitryGalyuk" screen="GitHub">GitHub</a></span></li>
+            <li><img class="svgIcon" src="icons/address.svg" /><span class="contacttext">Warsaw, Poland</span></li>
         </ul>
         <!-- <span class="moto">Software Engineering Program Manager. Cross Platform. Cross Culture</span> -->
         <span class="moto">Senior Leader in Software Engineering. Cross Platform. Cross Culture</span>
