--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                     <li>Industry domains:</li>
                     <li><a href="#articlewpm">Workforce Planning and Management</a></li>
                     <li><a href="#articlerelocator">International Mobility</a></li>
+                    <li>Supply Chain</li>
                 </ul>
             </article>
         </section>
