--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Dmitry Galyuk -- CV</title>
     <script src="scripts.js" ></script>
     <link rel="stylesheet" href="styles.css" >
+
+    <meta http-equiv="Content-Language" content="pl" >
+    <meta charset="UTF-8" >
 </head>
 
 <body>
