--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                 <span class="employer"><a href="https://wizart.ai">Wizart.ai</a></span>
                 <ul>
                     <li><b>Digital Transformation</b>: Championed a data-driven decision-making shift, seamlessly integrating CRM, accounting, and production systems to cut out manual data entry. Implemented real-time Business Intelligence solution for enhanced strategic insight.</li>
-                    <li><b>Product Portfolio Revamp</b>: transformed a disjointed application suite into a unified platform with a comprehensive user portal. This portal now serves as a single entry point for product management and asset review, streamlining user experience and operational efficiency. Successfully separated the core platform from existing products, enabling more versatile and efficient asset utilization across offerings.</li>
+                    <li>Orchestrated the transformation of the production environment from a collection of static virtual machines within a single network to a dynamic mix of auto-scalable machines and cloud-native services. This strategic shift resulted in a <b>50%&nbsp;reduction in operational costs</b> while significantly fortifying security measures and improving the overall robustness of the solution.</li>
+                    <li><b>Product Portfolio Revamp</b>: transformed a disjointed application suite into a unified platform. This portal now serves as a single entry point for product management and asset review, streamlining user experience and operational efficiency. Successfully separated the core platform from existing products, enabling more versatile and efficient asset utilization across offerings.</li>
                 </ul>
             </article>
 
