--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                 <span class="role">Chief Technology Officer</span>
                 <span class="employer"><a href="https://wizart.ai">Wizart.ai</a></span>
                 <ul>
-                    <li><b>Digital Transformation</b>: Championed a data-driven decision-making shift, seamlessly integrating CRM, accounting, and production systems to cut out manual data entry. Implemented real-time Business Intelligence solution for enhanced strategic insight.</li>
+                    <li><b>Digital Transformation</b>: Championed a data-driven decision-making shift, seamlessly integrating CRM, accounting, and production systems to cut out manual data entry. Implemented real-time Business Intelligence solution for enhanced strategic insight. As a result of conscious decisions the overall <b>company profitability increased by 20% and became positive</b></li>
                     <li>Orchestrated the transformation of the production environment from a collection of static virtual machines within a single network to a dynamic mix of auto-scalable machines and cloud-native services. This strategic shift resulted in a <b>50%&nbsp;reduction in operational costs</b> while significantly fortifying security measures and improving the overall robustness of the solution.</li>
-                    <li><b>Product Portfolio Revamp</b>: transformed a disjointed application suite into a unified platform. This portal now serves as a single entry point for product management and asset review, streamlining user experience and operational efficiency. Successfully separated the core platform from existing products, enabling more versatile and efficient asset utilization across offerings.</li>
+                    <li><b>Product Portfolio Revamp</b>: transformed a disjointed application suite into a unified platform and released the new offering. This portal now serves as a single entry point for product management and asset review, streamlining user experience and operational efficiency. Successfully separated the core platform from existing products, enabling more versatile and efficient asset utilization across offerings. New API offering is targeted to high-net-worth clients increasing the overall <b>product profitability x10</b></li>
                 </ul>
             </article>
 
